# clash-tray

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clash-tray.py  clash_tray.py  clashtray.cpp  clashtray.rc  icon.rc  logger.cpp  logger.hpp  main.py  pyinstaller.py  requirements.txt
.github/workflows/: build.yml
LICENSES/jaredtao/: LICENSE
src/: clashtray.cpp  clashtray.hpp  main.cpp  utils.cpp
src/utils/: clash_process_mgr.cpp  clash_process_mgr.hpp  logger.cpp  logger.hpp  logger_template.hpp  utils.cpp  utils.hpp
